INTG-115, INTG-34: fix table data wrapping issue with event actions

--- a/public/sass/components/_overops_custom.scss
+++ b/public/sass/components/_overops_custom.scss
@@ -433,6 +433,14 @@ tr.strike {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    & > a {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+    &.actions-wrapper {
+      overflow: visible; // enable tooltips and dropdown menu
+    }
   }
 
   tr:hover {
